--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,61 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
-  <title>Cursos - SmallDev</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Cursos - SmallDev</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body class="janela"> 
-<br>
-  <div class="container">
-    <h2>Cursos - SmallDev</h2>
-    <br>
-    <div class="card-columns">
-      <div class="card border-primary" >
-        <div class="card-body text-center text-info">
-          <h4 class="card-title">Phyton</h4>
-          <h6 class="card-subtitle">180 Horas</h6>
-          <hr>
-        </div>
-      </div>
-      <div class="card border-primary">
-        <div class="card-body text-center text-info">
-          <h4 class="card-title">C#</h4>
-          <h6 class="card-subtitle">160 Horas</h6>
-          <hr>
-        </div>
-      </div>
-      <div class="card border-primary">
-        <div class="card-body text-center text-info">
-          <h4 class="card-title">VBA</h4>
-          <h6 class="card-subtitle">200 Horas</h6>
-          <hr>
-        </div>
-      </div>
-      <div class="card border-primary">
-        <div class="card-body text-center text-info">
-          <h4 class="card-title">HTML</h4>
-          <h6 class="card-subtitle">90 Horas</h6>
-          <hr>
-        </div>
-      </div>  
-      <div class="card border-primary">
-        <div class="card-body text-center text-info">
-          <h4 class="card-title">CSS</h4>
-          <h6 class="card-subtitle">100 Horas</h6>
-          <hr>
-        </div>
-      </div>
-      <div class="card border-primary">
-        <div class="card-body text-center text-info">
-          <h4 class="card-title">Java</h4>
-          <h6 class="card-subtitle">180 Horas</h6>
-          <hr>
-        </div>
-      </div>
+
+<body>
+
+    <app-cadastra-curso (onClickCadastraCurso)="adicionar($event)"> </app-cadastra-curso>
+    <div class="container">
+        <app-cursos [curso]="c" *ngFor="let c of cursos"></app-cursos>
     </div>
-  </div>
 </body>
+
 </html>
-
-
